made a <main> and a <section class=userInputs, put input fields and a plus, equal, and clear button in that section

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,15 @@
     <title>Server Side Calculator</title>
 </head>
 <body>
-    
+    <header>Calculator</header>
+    <main>
+        <section class="userInputs">
+        <input id="numberOne" type="number" placeholder="">
+        <button> + </button>
+        <input id="numberTwo" type="number" placeholder="">
+        <button> = </button>
+        <button> Clear </button>
+        </section>
+    </main>
 </body>
 </html>
