got addition and clear inputs buttons and functions working

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,10 +16,10 @@
     <main>
         <section id="userInputs">
         <input id="numberOne" type="number" placeholder="">
-        <button> + </button>
+        <button id="addition"> + </button>
         <input id="numberTwo" type="number" placeholder="">
-        <button> = </button>
-        <button> Clear </button>
+        <button id="equal"> = </button>
+        <button id="clearInputs"> Clear </button>
         </section>
         <section id="calculatorResult">
             <!-- render result here -->
