got correct addition results and history to display

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,6 +24,7 @@
         <section id="calculatorResult">
             <!-- render result here -->
         </section>
+        <h3>History of Calculations</h3>
         <ul id="calculatorHistory">
             <!-- render list of previous calculations -->
         </ul>
