added subtract, multiply, and divide buttons with their association functions, verified that they work

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,6 +17,9 @@
         <section id="userInputs">
         <input id="numberOne" type="number" placeholder="">
         <button id="addition"> + </button>
+        <button id="subtraction"> - </button>
+        <button id="multiplication"> * </button>
+        <button id="division"> / </button>
         <input id="numberTwo" type="number" placeholder="">
         <button id="equal"> = </button>
         <button id="clearInputs"> Clear </button>
