starting to style page by turning it into a calculator app. made lots of buttons. arranging with flexbox

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,14 +15,44 @@
     </header>
     <main>
         <section id="userInputs">
-        <input id="numberOne" type="number" placeholder="">
-        <button id="addition"> + </button>
-        <button id="subtraction"> - </button>
-        <button id="multiplication"> * </button>
-        <button id="division"> / </button>
-        <input id="numberTwo" type="number" placeholder="">
-        <button id="equal"> = </button>
-        <button id="clearInputs"> Clear </button>
+            <input id="numberOne" type="number" placeholder="">
+            <!-- <button id="addition"> + </button> -->
+            <!-- <button id="subtraction"> - </button> -->
+            <!-- <button id="multiplication"> * </button> -->
+            <!-- <button id="division"> / </button> -->
+            <input id="numberTwo" type="number" placeholder="">
+            <!-- <button id="equal"> = </button> -->
+            <!-- <button id="clearInputs"> Clear </button> -->
+            </section>
+        <section id="calculatorButtons">
+            <div id="rowOne">
+            <button id="clearInputs"> Clear </button>
+            <button id= makeNegative"> +/- </button>
+            <button id="division"> / </button>
+            </div>
+            <div id="rowTwo">
+                <button id="seven"> 7 </button>
+                <button id="eight"> 8 </button>
+                <button id="nine"> 9 </button>
+                <button id="multiplication"> * </button>
+            </div>
+            <div id="rowThree">
+                <button id="four"> 4 </button>
+                <button id="five"> 5 </button>
+                <button id="six"> 6 </button>
+                <button id="subtraction"> - </button>
+            </div>
+            <div id="rowFour">
+                <button id="one"> 1 </button>
+                <button id="two"> 2 </button>
+                <button id="three"> 3 </button>
+                <button id="addition"> + </button>
+            </div>    
+            <div id="rowFive">
+                <button id="zero"> 0 </button>
+                <button id="dot"> . </button>
+                <button id="equal"> = </button>
+            </div>
         </section>
         <section id="calculatorResult">
             <!-- render result here -->
