got buttons arranged in a calculator display using flexbox css

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,39 +14,44 @@
         <h1>Calculator</h1>
     </header>
     <main>
-        <section id="userInputs">
-            <input id="numberOne" type="number" placeholder="">
+        <!-- <section id="userInputs"> -->
+            <!-- <input id="numberOne" type="number" placeholder=""> -->
             <!-- <button id="addition"> + </button> -->
             <!-- <button id="subtraction"> - </button> -->
             <!-- <button id="multiplication"> * </button> -->
             <!-- <button id="division"> / </button> -->
-            <input id="numberTwo" type="number" placeholder="">
+            <!-- <input id="numberTwo" type="number" placeholder=""> -->
             <!-- <button id="equal"> = </button> -->
             <!-- <button id="clearInputs"> Clear </button> -->
             </section>
         <section id="calculatorButtons">
+            <div id="userInputs">
+                <input id="numberOne" type="number" placeholder="">
+                <input id="chosenOperator" type="text" placeholder="">
+                <input id="numberTwo" type="number" placeholder="">
+            </div>
             <div id="rowOne">
-            <button id="clearInputs"> Clear </button>
-            <button id= makeNegative"> +/- </button>
-            <button id="division"> / </button>
+                <button id="clearInputs"> Clear </button>
+                <button id= makeNegative"> +/- </button>
+                <button id="division"> / </button>
             </div>
             <div id="rowTwo">
-                <button id="seven"> 7 </button>
-                <button id="eight"> 8 </button>
-                <button id="nine"> 9 </button>
-                <button id="multiplication"> * </button>
+                <button class="r2Buttons"> 7 </button>
+                <button class="r2Buttons"> 8 </button>
+                <button class="r2Buttons"> 9 </button>
+                <button class="r2Buttons"> * </button>
             </div>
             <div id="rowThree">
-                <button id="four"> 4 </button>
-                <button id="five"> 5 </button>
-                <button id="six"> 6 </button>
-                <button id="subtraction"> - </button>
+                <button class="r3Buttons"> 4 </button>
+                <button class="r3Buttons"> 5 </button>
+                <button class="r3Buttons"> 6 </button>
+                <button class="r3Buttons"> - </button>
             </div>
             <div id="rowFour">
-                <button id="one"> 1 </button>
-                <button id="two"> 2 </button>
-                <button id="three"> 3 </button>
-                <button id="addition"> + </button>
+                <button class="r4Buttons"> 1 </button>
+                <button class="r4Buttons"> 2 </button>
+                <button class="r4Buttons"> 3 </button>
+                <button class="r4Buttons"> + </button>
             </div>    
             <div id="rowFive">
                 <button id="zero"> 0 </button>
