got a few number buttons working so that pressing them displays the appropriate number in the input field

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,37 +26,38 @@
             </section>
         <section id="calculatorButtons">
             <div id="userInputs">
-                <input id="numberOne" type="number" placeholder="">
+                <input id="inputField" type="text" placeholder="">
+
+                <!-- <input id="numberOne" type="number" placeholder="">
                 <input id="chosenOperator" type="text" placeholder="">
-                <input id="numberTwo" type="number" placeholder="">
+                <input id="numberTwo" type="number" placeholder=""> -->
             </div>
             <div id="rowOne">
-                <button id="clearInputs"> Clear </button>
-                <button id= makeNegative"> +/- </button>
-                <button id="division"> / </button>
+                <button class="r1Buttons" id="clearInputs"> Clear </button>
+                <button class="r1Buttons" id="division"> / </button>
             </div>
             <div id="rowTwo">
-                <button class="r2Buttons"> 7 </button>
-                <button class="r2Buttons"> 8 </button>
-                <button class="r2Buttons"> 9 </button>
-                <button class="r2Buttons"> * </button>
+                <button class="r2Buttons" id="seven"> 7 </button>
+                <button class="r2Buttons" id="eight"> 8 </button>
+                <button class="r2Buttons" id="nine"> 9 </button>
+                <button class="r2Buttons" id="multiplication"> * </button>
             </div>
             <div id="rowThree">
-                <button class="r3Buttons"> 4 </button>
-                <button class="r3Buttons"> 5 </button>
-                <button class="r3Buttons"> 6 </button>
-                <button class="r3Buttons"> - </button>
+                <button class="r3Buttons" id="four"> 4 </button>
+                <button class="r3Buttons" id="five" > 5 </button>
+                <button class="r3Buttons" id="six"> 6 </button>
+                <button class="r3Buttons" id="subtraction"> - </button>
             </div>
             <div id="rowFour">
-                <button class="r4Buttons"> 1 </button>
-                <button class="r4Buttons"> 2 </button>
-                <button class="r4Buttons"> 3 </button>
-                <button class="r4Buttons"> + </button>
+                <button class="r4Buttons" id="one"> 1 </button>
+                <button class="r4Buttons" id="two"> 2 </button>
+                <button class="r4Buttons" id="three"> 3 </button>
+                <button class="r4Buttons" id="addition"> + </button>
             </div>    
             <div id="rowFive">
-                <button id="zero"> 0 </button>
-                <button id="dot"> . </button>
-                <button id="equal"> = </button>
+                <button class="r5Buttons" id="zero"> 0 </button>
+                <button class="r5Buttons" id="dot"> . </button>
+                <button class="r5Buttons" id="equal"> = </button>
             </div>
         </section>
         <section id="calculatorResult">
