adding color and centering the calculator

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,8 +23,11 @@
             <!-- <input id="numberTwo" type="number" placeholder=""> -->
             <!-- <button id="equal"> = </button> -->
             <!-- <button id="clearInputs"> Clear </button> -->
-            </section>
-        <section id="calculatorButtons">
+            <!-- </section> -->
+        <section id="calculatorResult">
+                <!-- render result here -->
+        </section>    
+        <section id="calculatorDisplay">
             <div id="userInputs">
                 <input id="inputField" type="text" placeholder="">
 
@@ -34,34 +37,31 @@
             </div>
             <div id="rowOne">
                 <button class="r1Buttons" id="clearInputs"> Clear </button>
-                <button class="r1Buttons" id="division"> / </button>
+                <button class="r1Buttons operator" id="division"> / </button>
             </div>
             <div id="rowTwo">
                 <button class="r2Buttons" id="seven"> 7 </button>
                 <button class="r2Buttons" id="eight"> 8 </button>
                 <button class="r2Buttons" id="nine"> 9 </button>
-                <button class="r2Buttons" id="multiplication"> * </button>
+                <button class="r2Buttons operator" id="multiplication"> * </button>
             </div>
             <div id="rowThree">
                 <button class="r3Buttons" id="four"> 4 </button>
                 <button class="r3Buttons" id="five" > 5 </button>
                 <button class="r3Buttons" id="six"> 6 </button>
-                <button class="r3Buttons" id="subtraction"> - </button>
+                <button class="r3Buttons operator" id="subtraction"> - </button>
             </div>
             <div id="rowFour">
                 <button class="r4Buttons" id="one"> 1 </button>
                 <button class="r4Buttons" id="two"> 2 </button>
                 <button class="r4Buttons" id="three"> 3 </button>
-                <button class="r4Buttons" id="addition"> + </button>
+                <button class="r4Buttons operator" id="addition"> + </button>
             </div>    
             <div id="rowFive">
                 <button class="r5Buttons" id="zero"> 0 </button>
                 <button class="r5Buttons" id="dot"> . </button>
                 <button class="r5Buttons" id="equal"> = </button>
             </div>
-        </section>
-        <section id="calculatorResult">
-            <!-- render result here -->
         </section>
         <h3>History of Calculations</h3>
         <ul id="calculatorHistory">
