finished css styling. went with a canoe theme

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Calculator</h1>
+        <h1>Canoe-themed Calculator</h1>
     </header>
     <main>
         <!-- <section id="userInputs"> -->
@@ -63,7 +63,7 @@
                 <button class="r5Buttons" id="equal"> = </button>
             </div>
         </section>
-        <h3>History of Calculations</h3>
+        <h3>Previous Calculations</h3>
         <ul id="calculatorHistory">
             <!-- render list of previous calculations -->
         </ul>
