moved server side math functions into a module to clean up the server code

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Canoe-themed Calculator</h1>
+        <h1>Cretaceous Calculator</h1>
     </header>
     <main>
         <!-- <section id="userInputs"> -->
