--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "style.css">
     <script src="jquery.js"></script>
-    <script src="client.js"></script>
+    <script type= "module" src="client.js"></script>
+    <script type= "module" src="./client-modules/numberFunctions.js"></script>
     <title>Server Side Calculator</title>
 </head>
 <body>
