finished moving button functions to a module and got calculator working again

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -37,30 +37,30 @@
                 <input id="numberTwo" type="number" placeholder=""> -->
             </div>
             <div id="rowOne">
-                <button class="r1Buttons" id="clearInputs"> Clear </button>
-                <button class="r1Buttons operator" id="division"> / </button>
+                <button class="r1Buttons string" id="clearInputs"> Clear </button>
+                <button class="r1Buttons operator string" id="division"> / </button>
             </div>
             <div id="rowTwo">
-                <button class="r2Buttons" id="seven"> 7 </button>
-                <button class="r2Buttons" id="eight"> 8 </button>
-                <button class="r2Buttons" id="nine"> 9 </button>
-                <button class="r2Buttons operator" id="multiplication"> * </button>
+                <button class="r2Buttons string" id="seven"> 7 </button>
+                <button class="r2Buttons string" id="eight"> 8 </button>
+                <button class="r2Buttons string" id="nine"> 9 </button>
+                <button class="r2Buttons operator string" id="multiplication"> * </button>
             </div>
             <div id="rowThree">
-                <button class="r3Buttons" id="four"> 4 </button>
-                <button class="r3Buttons" id="five" > 5 </button>
-                <button class="r3Buttons" id="six"> 6 </button>
-                <button class="r3Buttons operator" id="subtraction"> - </button>
+                <button class="r3Buttons string" id="four"> 4 </button>
+                <button class="r3Buttons string" id="five" > 5 </button>
+                <button class="r3Buttons string" id="six"> 6 </button>
+                <button class="r3Buttons operator string" id="subtraction"> - </button>
             </div>
             <div id="rowFour">
-                <button class="r4Buttons" id="one"> 1 </button>
-                <button class="r4Buttons" id="two"> 2 </button>
-                <button class="r4Buttons" id="three"> 3 </button>
-                <button class="r4Buttons operator" id="addition"> + </button>
+                <button class="r4Buttons string" id="one"> 1 </button>
+                <button class="r4Buttons string" id="two"> 2 </button>
+                <button class="r4Buttons string" id="three"> 3 </button>
+                <button class="r4Buttons operator string" id="addition"> + </button>
             </div>    
             <div id="rowFive">
-                <button class="r5Buttons" id="zero"> 0 </button>
-                <button class="r5Buttons" id="dot"> . </button>
+                <button class="r5Buttons string" id="zero"> 0 </button>
+                <button class="r5Buttons string" id="dot"> . </button>
                 <button class="r5Buttons" id="equal"> = </button>
             </div>
         </section>
